[package]
name = "rust-for-nodejs-devs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"

[[example]]
name = "comments"
path = "examples/comments.rs"

[[example]]
name = "print"
path = "examples/print.rs"

[[example]]
name = "logging"
path = "examples/logging.rs"

[[example]]
name = "variables"
path = "examples/variables.rs"
